# OpenCL-CLHPP

./: CMakeLists.txt
.github/workflows/: linux.yml  macos.yml  presubmit.yml  release.yml  windows.yml
cmake/: DebSourcePkg.cmake  Package.cmake
examples/src/: CMakeLists.txt
include/CL/: opencl.hpp
tests/: CMakeLists.txt  cmock.yml  test_openclhpp.cpp
